Fix chevron box misalignment on Build History view
The .jenkins-menu-dropdown-chevron inside .jenkins-table__link was
positioned with 'top: 0' which didn't vertically center it within
the table row. Changed to 'top: 50%; transform: translateY(-50%)'
for proper vertical centering.

Fixes #26491

--- a/src/main/scss/components/_table.scss
+++ b/src/main/scss/components/_table.scss
@@ -165,7 +165,8 @@
 
   &__link {
     .jenkins-menu-dropdown-chevron {
-      top: 0;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
 
